force-app/main/default/objects/OEM_Communication_Plan__c/OEM_Communication_Plan__c.object-meta.xml
<CustomObject>
    <description>Created for CR 12012 - Story 195572. This object is child of OEM Requirement.</description>
    <label>OEM Communication Plan</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Communication Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>