force-app/main/default/objects/OEM_Communication_Plan__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Delivery Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>