force-app/main/default/objects/OEM_Communication_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>