force-app/main/default/objects/OEM_Communication_Plan__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Details</label>
    <length>60</length>
    <type>Text</type>
</CustomField>