force-app/main/default/objects/OEM_Communication_Plan__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>