force-app/main/default/objects/OEM_Communication_Plan__c/fields/OEM_Requirement__c.field-meta.xml
<CustomField>
    <fullName>OEM_Requirement__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>OEM Requirement</label>
    <referenceTo>OEM_Requirement__c</referenceTo>
    <relationshipLabel>OEM Communication Plan</relationshipLabel>
    <relationshipName>OEM_Communication_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>