force-app/main/default/objects/OEM_Communication_Plan__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Owner</label>
    <length>20</length>
    <type>Text</type>
</CustomField>