force-app/main/default/objects/OEM_Communication_Plan__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Created for CR 12012 - Story 195572.</description>
    <label>Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>